<resources>
    <string name="app_name">Ecology Assistant</string>
    <string name="txt_name">Имя</string>
    <string name="txt_secondname">Фамилия</string>
    <string name="txt_password">Пароль</string>
    <string name="txt_number">Номер тел</string>
    <string name="txt_email">Почта</string>
    <string name="txt_reg">Регистрация</string>
    <string name="txt_aut">Авторизация</string>
    <string name="txt_createac">Зарегестрироваться</string>
    <string name="txt_loginac">Войти в аккаунт</string>
    <string name="txt_regbtn">Зарегистрироваться</string>
    <string name="txt_autbtn">Войти</string>
    <string name="txt_prbtn">Профиль</string>
    <string name="txt_obbtn">Обсуждения проектов</string>
    <string name="txt_obmybtn">Мои проекты</string>
    <string name="txt_mapbtn">Карта</string>
    <string name="txt_exitbtn">Выйти</string>
    <string name="title_activity_maps">MapsActivity</string>
<!--    <string name="map_id">f9e1b3ac5b28706b</string>-->
    <string name="maps_api_key">AIzaSyDl-Yg-RVvDayl7i5MBR2WDhFK1qpMeucI</string>
    <string name="txt_save_change">Сохранить изменения</string>
    <string name="txt_mainText">Опишите ваш проект</string>
    <string name="txt_createProject">Создать проект</string>
    <string name="txt_timeProject">Дата</string>
    <string name="txt_nameProject">Имя проекта</string>
    <string name="txt_authorProject">Автор</string>
    <string name="txt_submitProject">Предложить проект</string>
    <string name="txt_like">Подписчики:</string>
    <string name="txt_comment">Комментарии:</string>
    <string name="txt_send">Отправить</string>
    <string name="txt_sendcomm">Оставить комментарий</string>
    <string name="txt_joinbtn">Присоединиться</string>
    <string name="txt_joinconfirmbtn">OK</string>
    <string name="txt_popularup">Наиболее популярные сверху</string>
    <string name="txt_newerup">Cтарые серху</string>
    <string name="txt_viewchat">Чат</string>
    <string name="txt_sendchat">Отправить</string>
    <string name="background_image">Приветсвенное изображение</string>
    <string name="ea_login_image">Бэк на экран входа</string>
</resources>