<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPageActivity"
    android:background="@drawable/back">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="150dp">


        <Button
            android:id="@+id/buttonprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_prbtn"
            android:background="@drawable/button_reg"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/buttoncreatedialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_createProject"
            android:background="@drawable/button_reg"
            android:layout_marginTop="15dp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/buttonmydialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_obmybtn"
            android:background="@drawable/button_reg"
            android:layout_marginTop="15dp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/buttondialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_obbtn"
            android:background="@drawable/button_reg"
            android:layout_marginTop="15dp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/buttonmap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_mapbtn"
            android:background="@drawable/button_reg"
            android:layout_marginTop="15dp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/buttonlogaut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_exitbtn"
            android:background="@drawable/button_reg"
            android:layout_marginTop="340dp"
            android:textAllCaps="false"/>
    </LinearLayout>

</RelativeLayout>