<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_element_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/teal_700">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/back_button"
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:src="?attr/homeAsUpIndicator"
                    app:tint="@color/white" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar"
        android:orientation="vertical"
        android:background="@drawable/back">


        <EditText
            android:id="@+id/editTextNameChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:ems="10"
            android:hint="@string/txt_name"
            android:hyphenationFrequency="none"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#A7FFEB"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editTextSecondNameChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/txt_secondname"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#A7FFEB"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editTextNumberSignedChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/txt_number"
            android:inputType="numberSigned"
            android:textColorHint="#A7FFEB"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button_savedChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/txt_save_change"
            android:background="@drawable/button_reg"
            android:textAllCaps="false"
            android:textSize="20sp"/>

    </LinearLayout>
    
</RelativeLayout>